2011-02-08  Sailesh Agrawal  <sail@chromium.org>

Reviewed by Kenneth Russell.

        Invalidate rect doesn't work for windowless plugins on Chromium
        https://bugs.webkit.org/show_bug.cgi?id=53117

        Added a test to make sure that NPN_InvalidateRect() works correctly for windowless plugins.

        * plugins/invalidate_rect-expected.txt: Added.
        * plugins/invalidate_rect.html: Added.
2011-02-08  Sailesh Agrawal  <sail@chromium.org>

        Reviewed by Kenneth Russell.

        Invalidate rect doesn't work for windowless plugins on Chromium
        https://bugs.webkit.org/show_bug.cgi?id=53117

        Invalidate rect for windowless plugins wasn't working if the web page was composited.

        The problem was that the invalidate call was causing simply dirtying the LayerChromium layers. Since the plugin was windowless this didn't cause the plugin to be repainted.

        Fix was to copy the invalidate code from WebCore/plugins/PluginView.cpp/PluginView::invalidateWindowlessPluginRect() which does the correct thing.

        Tested my fix on Windows and Mac and verified that the movie on http://apple.com/appltv correctly plays. Verified that windowed plugins still correctly draw as well.

        * src/WebPluginContainerImpl.cpp:
        (WebKit::WebPluginContainerImpl::invalidateRect):
2011-02-08  Sailesh Agrawal  <sail@chromium.org>

        Reviewed by Kenneth Russell.

        Invalidate rect doesn't work for windowless plugins on Chromium
        https://bugs.webkit.org/show_bug.cgi?id=53117

        Added two new utility methods.
        - layoutTestController.displayInvalidatedRegion() does a paint of any area that has been invalidated. This is different from layoutTestController.display() which explicitly invalidates the entire page then paints.
        - plugin.invalidateRect(left, top, right, bottom) - invalidates the given rect
        This is used to test that invalidating a rect correctly causes a repaint of the plugin.

        * DumpRenderTree/LayoutTestController.cpp:
        (displayInvalidatedRegionCallback):
        (LayoutTestController::staticFunctions):
        * DumpRenderTree/LayoutTestController.h:
        * DumpRenderTree/TestNetscapePlugIn/PluginObject.cpp:
        (invalidateRect):
        (pluginInvoke):
        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::LayoutTestController):
        (LayoutTestController::displayInvalidatedRegion):
        * DumpRenderTree/chromium/LayoutTestController.h:
        * Scripts/webkitpy/layout_tests/port/chromium_gpu.py:

Canonical link: https://commits.webkit.org/68067@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78010 268f45cc-cd09-0410-ab3c-d52691b4dbfc